[package]
name = "dvm"
description = "discord version manager for linux"
homepage = "https://github.com/diced/dvm"
repository = "https://github.com/diced/dvm.git"
license = "GPL-3"
version = "1.2.0"
authors = ["diced <pranaco2@gmail.com>"]
edition = "2021"

[[bin]]
name = "dvm"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.12", features = [
    "json",
    "native-tls",
    "blocking",
], default-features = false }
colored = "2.2.0"
clap = { version = "4.5.23", features = ["derive", "color"] }
clap_complete = "4.5.40"
